class work 24 september

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 spring.application.name=class22project
-#server.port=8081
+server.port=8080
 #app.language=en
 app.currency=pound
 minimum.profit=3
 
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5432/myshop
+spring.datasource.username=postgres
+spring.datasource.password=mypassword
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql: true
