--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/myshop
 spring.datasource.username=postgres
 spring.datasource.password=mypassword
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+logging.level.org.springframework.security=DEBUG
 spring.jpa.show-sql: true
