class work 2 oct

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.datasource.username=postgres
 spring.datasource.password=mypassword
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 logging.level.org.springframework.security=DEBUG
-spring.jpa.show-sql: true
+spring.jpa.show-sql=true
